Code style fixes in Kafka[Protocol|Request]Handler